build: kapt 빌드가 너무 느려서 수정
  - `kapt.include.compile.classpath=true` in gradle.properties

Signed-off-by: debop <sunghyouk.bae@gmail.com>