@@ -17,29 +17,9 @@ allOpen {
 }
 
 kapt {
-    includeCompileClasspath = true
     correctErrorTypes = true
     showProcessorStats = true
-
-//    arguments {
-//        arg("querydsl.entityAccessors", "true")  // Association의 property는 getter/setter를 사용하도록 합니다.
-//        arg("querydsl.kotlinCodegen", "true") // QueryDSL Kotlin Codegen 활성화
-//    }
-    javacOptions {
-        option("--add-modules", "java.base")
-    }
 }
-
-//idea {
-//    module {
-//        val kaptMain = file("build/generated/source/kapt/main")
-//        sourceDirs.plus(kaptMain)
-//        generatedSourceDirs.plus(kaptMain)
-//
-//        val kaptTest = file("build/generated/source/kapt/test")
-//        testSources.plus(kaptTest)
-//    }
-//}
 
 // NOTE: implementation 로 지정된 Dependency를 testImplementation 으로도 지정하도록 합니다.
 configurations {
@@ -52,9 +32,8 @@ dependencies {
     api(project(":bluetape4k-vertx-core"))
 
     // NOTE: Java 9+ 환경에서 kapt가 제대로 동작하려면 javax.annotation-api 를 참조해야 합니다.
-    api(Libs.jakarta_annotation_api)
+    kapt(Libs.jakarta_annotation_api)
 
-//    api(Libs.jakarta_persistence_api)
     api(Libs.hibernate_reactive_core)
 
     // hibernate-reactive 는 querydsl 을 사용하지 못한다. 대신 jpamodelgen 을 사용합니다.
